    + Add symbols file for libpulse-mainloop-glib0.symbols
    + Use upstream esdcompat manpage
    + Update pulseaudio.install for 0.99.1
    + Install vapi files
    + Add LDFLAGS += -Wl,--no-as-needed
    + Update pulseaudio.default documentation.
    + Small tweaks to the init script
    + Automatically enable the pulse alsa modules if pulse is running
    + Tweak dependencies a bit
  * debian/README.Debian, remove redudant comments
  * debian/control: switch to tdb as the backend database
  * debian/control: Enable orc support
  * debian/control: Add libfftw3-dev to b-d for the equalizer module
  * debian/pulseaudio.install: Install module-equalizer-sink
  * debian/{control,rules}: No longer build pulseaudio-module-hal

 -- Sjoerd Simons <sjoerd@debian.org>  Fri, 12 Aug 2011 22:38:26 +0200

pulseaudio (0.9.23-1) unstable; urgency=low

  [ Daniel T Chen ]
  * debian/control:
    + Fix typo in long description of pulseaudio-module-x11, thanks to
      Sam Morris (Closes: #500038)
    + Clarify long description of pulseaudio-esound-compat. Many apps
      still in use require functionality from this package
      (Closes: #601725)
  * debian/libpulse-dev.examples: Apply patch from Mario Lang to include
    simple examples in the dev package. Thanks! (Closes: #561258)
  * debian/patches/
    0003-Mention-speex-and-libsamplerate-in-pulse-daemon.conf.patch:
    + Mention speex in the resampling section. Currently the Resampler
      section of "Programming with Speex (the libspeex API)" contains
      the relevant information (Closes: #541206)
  * debian/patches/0004-Fix-FTBFS-with-xcb-util-0.3.8.patch:
    + Apply patch from Arnaud Fontaine <arnau@debian.org> and the
      suggestion from Alessandro Ghedini <al3xbio@gmail.com> to fix
      FTBFS with xcb-util 0.3.8. Thanks, Arnaud and Alessandro!
      (Closes: #624847)
  * debian/pulseaudio-utils.links: Also add pamon(1), parec(1), and
    parecord(1) (Closes: #599696)