@@ -3,7 +3,7 @@ Section: sound
 Priority: optional
 Maintainer: Pulseaudio maintenance team <pkg-pulseaudio-devel@lists.alioth.debian.org>
 Uploaders: CJ van den Berg <cj@vdbonline.com>, Sjoerd Simons <sjoerd@debian.org>
-Build-Depends: debhelper (>= 5), cdbs, quilt, m4, dh-autoreconf,
+Build-Depends: debhelper (>= 8.1.3), cdbs, quilt, m4, dh-autoreconf,
     libltdl-dev (>= 2.2.6a-2),
     libsamplerate0-dev, libsndfile1-dev (>= 1.0.20), libglib2.0-dev,
     libcap-dev [!kfreebsd-i386 !kfreebsd-amd64 !hurd-i386],
@@ -25,6 +25,7 @@ Homepage: http://www.pulseaudio.org
 
 Package: pulseaudio
 Architecture: any
+Multi-Arch: foreign
 Depends: ${shlibs:Depends}, ${misc:Depends}, adduser,
   lsb-base (>= 3.2-13), consolekit,
   udev (>= 143) [!kfreebsd-i386 !kfreebsd-amd64 !hurd-i386],
@@ -311,6 +312,8 @@ Description: X11 module for PulseAudio sound server debugging symbols
 Package: libpulse0
 Section: libs
 Architecture: any
+Multi-Arch: same
+Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Breaks: pavucontrol (<< 0.9.8)
 Suggests: pulseaudio
@@ -325,6 +328,7 @@ Description: PulseAudio client libraries
 Package: libpulse0-dbg
 Section: debug
 Architecture: any
+Multi-Arch: same
 Priority: extra
 Depends: ${misc:Depends}, libpulse0 (= ${binary:Version})
 Description: PulseAudio client libraries detached debugging symbols
@@ -337,6 +341,8 @@ Description: PulseAudio client libraries detached debugging symbols
 
 Package: libpulse-mainloop-glib0
 Architecture: any
+Multi-Arch: same
+Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: PulseAudio client libraries (glib support)
  PulseAudio, previously known as Polypaudio, is a sound server for POSIX and
@@ -351,6 +357,7 @@ Description: PulseAudio client libraries (glib support)
 Package: libpulse-mainloop-glib0-dbg
 Section: debug
 Architecture: any
+Multi-Arch: same
 Priority: extra
 Depends: ${misc:Depends}, libpulse-mainloop-glib0 (= ${binary:Version})
 Description: PulseAudio client libraries (glib support) debugging symbols
@@ -364,6 +371,7 @@ Description: PulseAudio client libraries (glib support) debugging symbols
 Package: libpulse-dev
 Section: libdevel
 Architecture: any
+Multi-Arch: same
 Depends: ${misc:Depends},
   libpulse0 (= ${binary:Version}),
   libpulse-mainloop-glib0 (= ${binary:Version}),
