@@ -1,6 +1,6 @@
-usr/lib/libpulse.so
-usr/lib/libpulse-simple.so
-usr/lib/libpulse-mainloop-glib.so
-usr/lib/pkgconfig/*
+usr/lib/*/libpulse.so
+usr/lib/*/libpulse-simple.so
+usr/lib/*/libpulse-mainloop-glib.so
+usr/lib/*/pkgconfig/*
 usr/include/pulse/*
 usr/share/vala/vapi
