@@ -1,1 +1,1 @@
-usr/lib/libpulse-mainloop-glib.so.*
+usr/lib/*/libpulse-mainloop-glib.so.*
