@@ -1,4 +1,4 @@
 etc/pulse/client.conf
-usr/lib/libpulse.so.*
-usr/lib/libpulse-simple.so.*
-usr/lib/libpulsecommon-*.so
+usr/lib/*/libpulse.so.*
+usr/lib/*/libpulse-simple.so.*
+usr/lib/*/libpulsecommon-*.so
