@@ -76,6 +76,6 @@ usr/lib/pulse-*/modules/module-virtual-source.so
 lib/udev/rules.d/90-pulseaudio.rules
 usr/share/locale
 usr/share/pulseaudio
-usr/lib/libpulsecore-*.so
+usr/lib/*/libpulsecore-*.so usr/lib
 usr/share/man/man5/default.pa.5
 usr/share/alsa
